@@ -163,3 +163,4 @@ $color-secondary-iris-blue-tints-11: $color-primary-white;
 
 // Special
 $color-special-grey: #DADADA;
+$color-special-grey2: #F7F7F7;
