@@ -9,6 +9,7 @@
     <script nomodule src="build/codecentric.js"></script>
   </head>
   <body>
+    <cc-tag>Tag!</cc-tag>
     <cc-content>
       <cc-button>Test Button</cc-button>
       <cc-button primary>Test Button</cc-button>
